Fixing issue with URL

--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -78,7 +78,7 @@ search = index=* eventtype="ms_defender_advanced_hunting_sourcetypes" eventtype=
 | eval file_hash=mvindex(split(tuple,"#:#:#"),0)\
 | eval file_name=mvindex(split(tuple,"#:#:#"),1)\
 | eval file_size=mvindex(split(tuple,"#:#:#"),2)\
-| stats first(action) AS action values(file_hash) AS file_hash values(file_name) AS file_name values(file_size) AS file_size first(message_id) AS message_id first(message_info) AS message_info values(recipient) AS recipient first(recipient_count) AS recipient_count values(recipient_domain) AS recipient_domain first(src) AS src first(src_user) As src_user first(src_user_domain) AS src_user_domain first(subject) AS subject first(filter_action) AS filter_action first(signature) AS signature first(signature_extra) AS signature_extra first(signature_id) AS signature_id min(time) AS time values(properties.Url) AS url BY internal_message_id\
+| stats first(action) AS action values(file_hash) AS file_hash values(file_name) AS file_name values(file_size) AS file_size first(message_id) AS message_id first(message_info) AS message_info values(recipient) AS recipient first(recipient_count) AS recipient_count values(recipient_domain) AS recipient_domain first(src) AS src first(src_user) As src_user first(src_user_domain) AS src_user_domain first(subject) AS subject first(filter_action) AS filter_action first(signature) AS signature first(signature_extra) AS signature_extra first(signature_id) AS signature_id min(time) AS time values(url) AS url BY internal_message_id\
 | fields - tuple\
 | tojson\
 | fields _raw\
